changed hosting to imgBox

--- a/Projects/JS/weather_app_p1/styles.css
+++ b/Projects/JS/weather_app_p1/styles.css
@@ -182,7 +182,7 @@ input{
     width: 40vw;
     height: 60vh;
     border-radius: 12px;
-    background: url('https://gdurl.com/s0T5') center/cover;
+    background: url('https://images2.imgbox.com/a2/79/TYeYJ8fK_o.png') center/cover;
     backdrop-filter: blur(5px);
     top: 23%;
     opacity: 0.8;
